--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,4 @@ services:
     stdin_open: true
     environment:
       - WATCHPACK_POLLING=true
+      - REACT_APP_API_URL=http://backend:8000/api
