--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "news-aggregator-react",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "ajv": "^8.17.1",
@@ -15,10 +12,22 @@
     "react-toastify": "^11.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@types/node": "^18.17.17",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "rimraf": "^6.0.1",
+    "svgo": "^3.3.2",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.7.3",
+    "web-vitals": "^4.2.4"
   },
   "browserslist": {
     "production": [
@@ -31,17 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/node": "^18.17.17",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.2",
-    "rimraf": "^6.0.1",
-    "svgo": "^3.3.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3",
-    "web-vitals": "^4.2.4"
   }
 }
