--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "dompurify": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "rimraf": "^6.0.1",
+    "sass": "^1.85.0",
     "svgo": "^3.3.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3",
